skapade funktion för att uppdatera data

--- a/moment01/2.2/src/scss/_container.scss
+++ b/moment01/2.2/src/scss/_container.scss
@@ -46,7 +46,7 @@ footer { clear: both; padding: 2em 0 0 0; font-size: 0.825em; color: #666; text-
     margin-top: 2em;
 }
 
-input[type="text"], select {
+input[type="text"], input[type="url"], select {
     
     padding: 5px;
     border-radius: .25rem;
