justerade js koden vilket gör att man kan lägga till och uppdatera kursen, scss gjorde tabellerna passar för minder enheter

--- a/moment01/2.2/src/scss/_container.scss
+++ b/moment01/2.2/src/scss/_container.scss
@@ -92,8 +92,8 @@ label {
 
 #kurs_info {
     display: flex;
-    align-items: center;
     flex-direction: column;
+    overflow-x: auto;
 }
 
 #kurs_info table {
@@ -109,4 +109,10 @@ td {
     text-align: center;
     line-height: 1.4em;
 }
+
+.inputField {
+    display: inline;
+    visibility: collapse;
+}
+
 }
