--- a/my-angular-app/src/app/navmenu/navmenu.component.html
+++ b/my-angular-app/src/app/navmenu/navmenu.component.html
@@ -4,8 +4,8 @@
         <span>></span>
     </button>
     <ul class="nav">
-        <li><a href="#">Hemsida</a></li>
-        <li><a href="#">omvandlare</a></li>
-        <li><a href="#">Om angular1</a></li>
+        <li><a routerLink="/" routerLinkActive="current">Hemsida</a></li>
+        <li><a routerLink="/converter" routerLinkActive="current">omvandlare</a></li>
+        <li><a routerLink="/about" routerLinkActive="current">Om angular1</a></li>
     </ul>
 </header>
