--- a/my-angular-app/src/app/footer/footer.component.html
+++ b/my-angular-app/src/app/footer/footer.component.html
@@ -1,3 +1,3 @@
 <footer>
-    <span>&copy;<span id="year">{{ year }}</span><span> Abokashef. All rights reserved</span></span><br><span id="time">Time: <span id="change_color">{{hour}}:{{minute}}:{{second}}</span></span>
+    <span>&copy;<span id="year">{{ year }}</span><span> Abokashef. All rights reserved</span></span><br><span id="time"><i class="fa fa-clock-o" aria-hidden="false"></i> <span id="change_color">{{hour}}:{{minute}}:<span style="color: rgb(144, 11, 240);">{{second}}</span></span></span>
 </footer>
