--- a/my-angular-app/src/app/converter/converter.component.scss
+++ b/my-angular-app/src/app/converter/converter.component.scss
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap');
+
+$font_family_main: "Roboto Condensed", sans-serif;
+
+
+
 #container {
     width: 100%;
     display: flex;
@@ -6,6 +12,7 @@
     flex-direction: column;
     background-color: whitesmoke;
     margin-top: 4em;
+    font-family: $font_family_main;
 
     .app {
         width: 50%;
@@ -15,8 +22,22 @@
         border-radius: 10px;
     }
 
-    .Result {
-        
+    .caption {
+        padding: .25em;
+    }
+    .checkBox {
+        width: 100%;
+    }
+
+    #meterInput {
+        padding: .5em;
+    }
+
+    input:invalid {
+        background-color: pink;
+    }
+    input:valid {
+        background-color: lightseagreen;
     }
 
     .btn {
