justerade styling på sidorna

--- a/my-angular-app/src/app/app.component.html
+++ b/my-angular-app/src/app/app.component.html
@@ -1,14 +1,6 @@
-<!DOCTYPE html>
-<html lang="sv">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <app-navmenu></app-navmenu>
 
-    <app-footer></app-footer>
-</body>
-</html>
+<app-navmenu></app-navmenu>
+<main>
 <router-outlet />
+</main>
+<app-footer></app-footer>
