--- a/my-angular-app/src/app/converter/converter.component.html
+++ b/my-angular-app/src/app/converter/converter.component.html
@@ -4,6 +4,13 @@
 
 
 <div id="container">
+    <div class="intro">
+        <p>
+            Välkommen till vår omvandlingswebbplats där vi gör det enkelt för dig att konvertera mellan olika mätningar och
+            temperaturskalor. Oavsett om du behöver omvandla längdenheter från meter till fot eller temperaturen från Celsius
+            till Fahrenheit, så har vi verktygen för att göra det snabbt och smidigt.
+        </p>
+    </div>
     <h2>Konvertera Enheter</h2>
     <div class="app" ng-app="">
         <form class="checkBox">
