--- a/my-angular-app/src/app/about/about.component.html
+++ b/my-angular-app/src/app/about/about.component.html
@@ -1,4 +1,5 @@
-<article class="about_contanier">
+
+<div class="about_contanier">
     <section>
         <h2 class="rubrik">moment03 Angular</h2>
     <p>
@@ -64,5 +65,5 @@
             med mera och en super fördel att vi kan använda dessa komponenterna på andra projekt.
         </p>
     </section>
-</article>
+</div>
 
