--- a/my-angular-app/src/app/about/about.component.scss
+++ b/my-angular-app/src/app/about/about.component.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: calc(100vh + 45em);
+    // height: calc(100vh + 45em);
     text-align: justify;
 
     .rubrik {
