justerade about sida styling

--- a/my-angular-app/src/app/about/about.component.html
+++ b/my-angular-app/src/app/about/about.component.html
@@ -1,6 +1,6 @@
 
 <div class="about_contanier">
-    <section>
+    <section class="sec">
         <h2 class="rubrik">moment03 Angular</h2>
     <p>
         I denna uppgift skall jag skapa en webbplats som bygger på Angular. den ska ha god responsiv design med ett väl fungerande navigationssystem.
@@ -16,7 +16,7 @@
         <li>Testning och felsökning.</li>
     </ol>
     </section>
-    <section>
+    <section class="sec">
         <h2>Arbetsproccess</h2>
         <ol>
             <li>För att skapa en Angular-webbplats krävde att jag först installerade Angular CLI. Genom detta verktyg kunde jag lätt
@@ -52,7 +52,7 @@
             </li>
         </ol>
     </section>
-    <section>
+    <section class="sec">
         <h2>slutsatser</h2>
         <p>
             Skapandet av en webbplats med Angular var inte lätt eftersom det kräver kännedom om ramen för Angular och dess flera
