--- a/my-angular-app/src/app/about/about.component.scss
+++ b/my-angular-app/src/app/about/about.component.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: center;
     // height: calc(100vh + 45em);
-    text-align: justify;
+    
 
     .rubrik {
         text-align: center;
@@ -17,14 +17,28 @@
         flex-direction: column;
         justify-content: center;
         max-width: 920px;
-
+        padding: .75em;
+        
     }
 
     p, li {
         font-size: 1.2em;
+        padding: .25em;
     }
 
     ::marker {
         color: red;
+    }
+}
+
+
+@media screen and (min-width: 600px) {
+    .about_contanier .sec {
+        width: 50%;
+    }
+}
+@media screen and (max-width: 599px) {
+    .about_contanier .sec {
+        width: 90%;
     }
 }
