--- a/my-angular-app/src/app/converter/converter.component.scss
+++ b/my-angular-app/src/app/converter/converter.component.scss
@@ -8,11 +8,11 @@
     align-items: center;
     flex-direction: column;
     background-color: whitesmoke;
-    margin-top: 4em;
+    padding-top: 4em;
     
 
     .intro {
-        width: 50%;
+        width: calc(50% + 10vw);
         padding: 1em;
         font-size: 1.2em;
     }
